@@ -1,6 +1,10 @@
 \chapter{The mesh}
 
-\devnote{This chapter is currently being written\ldots}
+\devnote{A new mesh library is currently being developed for
+  \dolfin{}. The new mesh library is currently available in the class
+  \texttt{NewMesh}, which will replace the current class \texttt{Mesh}
+  in \dolfin{} version 0.6.3, at which time this chapter will also be
+  updated and expanded.}
 
 % FIXME: Triangular, tetrahedral, include some images,
 % FIXME: mesh refinement, connectivity, iterators, file formats, local
