@@ -1,7 +1,7 @@
 \chapter{Ordinary differential equations}
 
-\devnote{This chapter is currently being written\ldots}
-
+\devnote{This chapter needs to be written. In the meantime, checkout the demos
+  in \texttt{src/demo/ode/} and the base class \texttt{ODE}.}
 
 
 % FIXME: Mono-adaptive, multi-adaptive, ODE base class, simple example,
