@@ -2,7 +2,8 @@
 \label{sec:pde}
 \index{partial differential equations}
 
-\devnote{This chapter is currently being written\ldots}
+\devnote{This chapter is incomplete and inaccurate and needs to be updated.
+In the meantime, checkout the demos in \texttt{src/demo/pde/}.}
 
 \dolfin{} provides a general interface for defining a partial differential 
 equation (PDE) in variational form. The variational form is compiled 
