@@ -29,6 +29,7 @@
 
 \appendix
 \input{chapters/referenceelements.tex}
+\input{chapters/design.tex}
 \input{chapters/installation.tex}
 \input{chapters/contributing.tex}
 \input{chapters/contributing-dolfin.tex}
